--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Nossa Base: A Harmonia Essencial</h2>
                 <div class="w-20 h-1 bg-gold mx-auto mb-6"></div>
                 <p class="text-gray-600 leading-relaxed text-lg">
-                    Para garantir a sonoridade rica e emocionante que é a nossa marca, toda contratação tem como ponto de partida a nossa formação padrão. Ela é composta pelas nossas <strong>três vozes em perfeita harmonia (R$ 900,00)</strong>, acompanhadas pela base sofisticada do <strong>teclado/piano (R$ 500,00)</strong>. A partir daqui, você pode adicionar outros instrumentos para criar a atmosfera que sempre sonhou.
+                    Para garantir a sonoridade rica e emocionante que é a nossa marca, toda contratação tem como ponto de partida a nossa formação padrão. Ela é composta pelas nossas <strong>três vozes em perfeita harmonia</strong>, acompanhadas pela base sofisticada do <strong>teclado/piano</strong>. A partir daqui, você pode adicionar outros instrumentos para criar a atmosfera que sempre sonhou.
                 </p>
             </section>
             
@@ -425,7 +425,7 @@
 
     <!-- Script to reveal pricing and animations -->
     <script>
-        const whatsappNumber = '5567996884226';
+        const whatsappNumber = '5567999143328';
 
         function contratarPlanoPronto(planName, instruments, price) {
             let message = `*Solicitação de Orçamento - Harmonia do Altar*\n\n`;
