--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <nav id="navbar" class="fixed top-0 left-0 w-full z-50 transition-all duration-300 py-2">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <a href="#" class="text-white text-2xl font-bold font-playfair flex items-center">
-                <img src="https://storage.googleapis.com/gemini-prod-us-east1-user-content/image_e7691e.png" alt="Logo Harmonia do Altar" class="h-10 mr-2 inline-block" onerror="this.onerror=null; this.src='https://placehold.co/40x40/ffffff/c9a959?text=H'">armonia do Altar
+                <img src="H.png" alt="Logo Harmonia do Altar" class="h-10 mr-2 inline-block" onerror="this.onerror=null; this.src='https://placehold.co/40x40/ffffff/c9a959?text=H'">armonia do Altar
             </a>
             
             <div class="hidden md:flex space-x-8">
@@ -235,7 +235,7 @@
     <header class="hero-bg text-white shadow-lg h-screen flex items-center justify-center">
         <div class="text-center">
             <h1 class="text-5xl md:text-7xl font-bold mb-2 animated-item">
-                <img src="https://storage.googleapis.com/gemini-prod-us-east1-user-content/image_e7691e.png" alt="Logo Harmonia do Altar" class="h-20 md:h-32 inline-block align-middle mr-4" onerror="this.onerror=null; this.src='https://placehold.co/128x128/ffffff/c9a959?text=H'">armonia do Altar
+                <img src="H.png" alt="Logo Harmonia do Altar" class="h-20 md:h-32 inline-block align-middle mr-4" onerror="this.onerror=null; this.src='https://placehold.co/128x128/ffffff/c9a959?text=H'">armonia do Altar
             </h1>
             <p class="text-xl md:text-2xl font-light animated-item delay-1">A Trilha Sonora Perfeita para o Seu Grande Dia</p>
         </div>
