--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Nossas Configurações Sugeridas</h2>
                 <div class="w-20 h-1 bg-gold mx-auto mb-6"></div>
                 <p class="text-gray-600 leading-relaxed text-lg mb-8">
-                    Nossa formação padrão inclui <strong>3 vozes e teclado</strong>, com a flexibilidade de adicionar outros instrumentos para personalizar sua sonoridade. O deslocamento tem tarifa fixa para <strong>Angélica/Ivinhema (MS) e valor por km para outras localidades (com um valor base).</strong> Taxas de processamento bancário aplicam-se a pagamentos via boleto e cartão (incluindo deslocamentos especiais), não sendo retidas pela Harmonia do Altar. <strong>Pix e dinheiro são isentos de taxas.</strong>
+                    Nossa formação padrão inclui <strong>3 vozes e teclado</strong>, com a flexibilidade de adicionar outros instrumentos para personalizar sua sonoridade. O deslocamento tem tarifa fixa para <strong>Angélica/Ivinhema (MS) e valor por km para outras localidades (com um valor base).</strong> Taxas de processamento bancário aplicam-se a pagamentos via boleto e cartão (incluindo deslocamentos especiais), não sendo retidas pela Harmonia do Altar. <strong>Pix e dinheiro são isentos de taxas bancárias.</strong>
                 </p>
             </div>
             
