--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 <label for="modal-destination-address" class="block text-gray-700 text-sm font-bold mb-2">Endereço Completo (Rua, Número, Cidade, Estado):</label>
                 <div class="flex space-x-2 mb-4">
                     <input type="text" id="modal-destination-address" placeholder="Ex: Av. Brasil, 123, Ivinhema, MS" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline focus:border-gold">
-                    <button type="button" id="open-map-selection-btn" class="bg-blue-500 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:bg-blue-600 transition-colors duration-300 text-sm flex-shrink-0">
+                    <button type="button" id="open-map-selection-btn" class="bg-gray-500 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:bg-gray-600 transition-colors duration-300 text-sm flex-shrink-0">
                         <i class="fas fa-map-marker-alt mr-1"></i> Abrir Mapa
                     </button>
                 </div>
