--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
         const CREDIT_CARD_TOTAL_PERCENTAGES = {
             1: 0.04980, 2: 0.04590 + 0.0531, 3: 0.05970 + 0.0531, 4: 0.07330 + 0.0531,
             5: 0.08660 + 0.0531, 6: 0.09960 + 0.0531, 7: 0.11240 + 0.0531, 8: 0.12500 + 0.0531,
-            9: 0.13730 + 0.0531, 10: 0.14930 + 0.0531, 11: 0.16120 + 0.0531, 12: 0.17280 + 0.0531
+            9: 0.13730 + 0.1531, 10: 0.14930 + 0.0531, 11: 0.16120 + 0.0531, 12: 0.17280 + 0.0531
         };
 
         // --- GLOBAL FUNCTIONS ---
@@ -2005,9 +2005,29 @@
                     }
                 });
                 
-                // --- SECURITY (Optional but good practice) ---
+                // --- SECURITY MEASURES TO DETER INSPECTION ---
                 // Disable right-click context menu
                 document.addEventListener('contextmenu', event => event.preventDefault());
+
+                // Disable specific keyboard shortcuts for developer tools and source view
+                document.addEventListener('keydown', event => {
+                    // F12 key
+                    if (event.key === 'F12') {
+                        event.preventDefault();
+                    }
+                    // Ctrl+Shift+I, Ctrl+Shift+J (Developer Tools)
+                    // Ctrl+U (View Source)
+                    // Ctrl+S (Save Page)
+                    if (event.ctrlKey && event.shiftKey && (event.key === 'I' || event.key === 'J')) {
+                        event.preventDefault();
+                    }
+                    if (event.ctrlKey && event.key === 'U') {
+                        event.preventDefault();
+                    }
+                    if (event.ctrlKey && event.key === 'S') {
+                        event.preventDefault();
+                    }
+                });
 
             } catch (error) {
                 console.error("Erro durante o carregamento do script:", error);
