docs: clarify libraries used by Google Maps

--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
     <!-- Script de Incorporação do Instagram -->
     <script async src="//www.instagram.com/embed.js"></script>
     
-    <!-- Google Maps API com biblioteca Places para preenchimento automático e matriz de distância -->
+    <!-- Google Maps API com bibliotecas Geometry e Places para preenchimento automático e matriz de distância -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoL-Za52C0cbwOen71nbKqDpLKgBufd0Y&libraries=geometry,places&callback=initMap"></script>
 
     <script>
